--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
     "expo": "~47.0.12",
-    "expo-secure-store": "^12.0.0",
+    "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
