--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~47.0.12",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendar-picker": "^7.1.4",
