--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react-native-calendar-picker": "^7.1.4",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-swipe-item": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
