--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-calendar-picker": "^7.1.4",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-elements": "^3.4.3",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
